--- a/.github/workflows/armtemplatedeploy.yaml
+++ b/.github/workflows/armtemplatedeploy.yaml
@@ -63,6 +63,7 @@ jobs:
     permissions:
       contents: none
     runs-on: ubuntu-latest
+    needs: armDeployWebPython
     environment:
       name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
