--- a/.github/workflows/armtemplatedeploy.yaml
+++ b/.github/workflows/armtemplatedeploy.yaml
@@ -17,7 +17,7 @@ jobs:
     env:
       resource_group_name: rg-stg-ghost
       location: westeurope
-      PYTHON_VERSION: 3.8
+      hostingPlanName: furi102-plan
     environment:
       name: staging
 
@@ -47,3 +47,12 @@ jobs:
           subscriptionId: ${{ env.subscriptionId }}
           resourceGroupName: ${{ env.resource_group_name }}
           template: ./arm-templates/azuredeploy.json
+          parameters: 
+            hostingPlanName = ${{ hostingPlanName }}
+            repoUrl = "https://github.com/furi102/Ghost-Azure"
+            branch = main
+            sitenName = furi102-site
+            siteLocation = westeurope
+
+
+
