--- a/.github/workflows/armtemplatedeploy.yaml
+++ b/.github/workflows/armtemplatedeploy.yaml
@@ -17,7 +17,7 @@ jobs:
     env:
       resource_group_name: rg-stg-ghost
       location: westeurope
-      hostingPlanName: furi102-plan
+      hostingPlanName: furi102-str-plan
     environment:
       name: staging
 
@@ -49,4 +49,45 @@ jobs:
           resourceGroupName: ${{ env.resource_group_name }}
           template: ./arm-templates/azuredeploy.json
         
+
+  armDeploy:
+    name: Deploy to Staging
+    runs-on: ubuntu-latest
+    env:
+      resource_group_name: rg-prd-ghost
+      location: westeurope
+      hostingPlanName: furi102-prd-plan
+    environment:
+      name: prod
+
+    needs: armDeployStaging
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy Resource Group ${{ env.resource_group_name }}
+        uses: Azure/arm-deploy@v1
+        with:
+          scope: subscription
+          subscriptionId: ${{ env.subscriptionId }}
+          region: "${{ env.location }}"
+          template: ./arm-templates/resourcegroup.json
+          parameters:
+            location="${{ env.location }}"
+            resourceGroupName=${{ env.resource_group_name }}
+          deploymentName: ${{ env.resource_group_name }}
+          deploymentMode: incremental
+
+      - name: Deploy azure App service
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ env.subscriptionId }}
+          resourceGroupName: ${{ env.resource_group_name }}
+          template: ./arm-templates/prd-azuredeploy.json
+
 
