change prd-json to see if complete mode is working

--- a/.github/workflows/armtemplatedeploy.yaml
+++ b/.github/workflows/armtemplatedeploy.yaml
@@ -40,7 +40,7 @@ jobs:
             location="${{ env.location }}"
             resourceGroupName=${{ env.resource_group_name }}
           deploymentName: ${{ env.resource_group_name }}
-          deploymentMode: incremental
+          deploymentMode: complete
 
       - name: Deploy azure App service
         uses: azure/arm-deploy@v1
@@ -81,7 +81,7 @@ jobs:
             location="${{ env.location }}"
             resourceGroupName=${{ env.resource_group_name }}
           deploymentName: ${{ env.resource_group_name }}
-          deploymentMode: incremental
+          deploymentMode: complete
 
       - name: Deploy azure App service
         uses: azure/arm-deploy@v1
