--- a/.github/workflows/armtemplatedeploy.yaml
+++ b/.github/workflows/armtemplatedeploy.yaml
@@ -17,7 +17,7 @@ jobs:
     env:
       resource_group_name: rg-stg-ghost
       location: westeurope
-      hostingPlanName: furi102-str-plan
+      hostingPlanName: furi102-stg-plan
     environment:
       name: staging
     steps:
